Starting to clean up the qmake project file to support multiple platforms.  I'm not sure if I'm going to support Xcode yet.  Seems like work.  I also might get rid of the VS solution file and just let people use qmake to generate one.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ ReprojectDepth/GeneratedFiles/*
 *.idb
 *.pdb
 ReprojectDepth/release/*
+/ReprojectDepth/ReprojectDepth.app/
+*.o
+moc_*
+/ReprojectDepth/.swp
+.DS_Store
+.swp
