I removed the VS solution files and just assumed that the user would have qmake available and can generate the makefiles that way.  At some point it would be nice to autoconfig all this stuff with cmake, but this works for now.  Not tested on Mac, but nothing touching the Mac stuff changed.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ moc_*
 /ReprojectDepth/.swp
 .DS_Store
 .swp
+ReprojectDepth/Makefile
+ReprojectDepth/Makefile.Debug
+ReprojectDepth/Makefile.Release
