Factored out the bundle.out code so that I can use it for other utilities.

--- a/BundleClouds/Makefile
+++ b/BundleClouds/Makefile
@@ -1,19 +1,15 @@
-CXXFLAGS = -O3
-LIBS     = -lopencv_core -lopencv_highgui 
-
+CXXFLAGS     = -O3
+LIB_PATH     = -L../BundleFile
+LIBS         = -lBundleFile -lopencv_core -lopencv_highgui 
+INCLUDE_PATH = -I../BundleFile
+ 
 all:	BundleClouds
 
-BundleClouds:	BundlePoint.h BundlePoint.o BundleView.h BundleView.o BundleCamera.h BundleCamera.o BundleFile.h BundleFile.o main.cpp
-	g++ $(CXXFLAGS) $(LIBS) BundlePoint.o BundleView.o BundleCamera.o BundleFile.o main.cpp -o BundleClouds
+BundleClouds:	../BundleFile/libBundleFile.a main.cpp
+	g++ main.cpp $(CXXFLAGS) $(LIB_PATH) $(LIBS) $(INCLUDE_PATH) -o BundleClouds
 
-BundlePoint.o:	BundlePoint.h BundlePoint.cpp BundleView.h
-	g++ $(CXXFLAGS) BundlePoint.cpp -c -o BundlePoint.o
-
-BundleView.o:	BundleView.h BundleView.cpp
-	g++ $(CXXFLAGS) BundleView.cpp -c -o BundleView.o
-
-BundleCamera.o:	BundleCamera.h BundleCamera.cpp
-	g++ $(CXXFLAGS) BundleCamera.cpp -c -o BundleCamera.o
+../BundleFile/libBundleFile.a:
+	cd ../BundleFile; make; cd ../BundleClouds
 
 clean:
 	rm *.o BundleClouds
