Fixed up some of my stupid mistakes.  I read some documentation somewhere that confused me and made me think that the previous code was wrong.  I'm also adding in some VS 2008 project and solution files so that it is a bit easier to build on Windows.  I probably won't provide support for other compilers on Windows.  I think one per platform is enough and there is a free version available.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,24 @@ moc_*
 ReprojectDepth/Makefile
 ReprojectDepth/Makefile.Debug
 ReprojectDepth/Makefile.Release
+*.cache
+BundleClouds/*.exe*
+BundleClouds/*.exe*
+BundleClouds/Debug/*
+BundleClouds/Release/*
+BundleFile/Debug/*
+BundleFile/Release/*
+bundler-v0.4-source/lib/5point/Debug/*
+bundler-v0.4-source/lib/5point/Release/*
+*/Debug/*
+bundler-v0.4-source/vc++/Release/*
+bundler-v0.4-source/lib/ann_1.1_char/Debug/*
+bundler-v0.4-source/lib/ann_1.1_char/Release/*
+bundler-v0.4-source/lib/cblas/Debug/*
+bundler-v0.4-source/lib/cblas/Release/*
+bundler-v0.4-source/lib/clapack/Debug/*
+bundler-v0.4-source/vc++/Debug/*
+*BuildLog.htm
+bundler-v0.4-source/lib/jpeg/Debug/*
+bundler-v0.4-source/lib/jpeg/Release/*
+*.old
