Opps, needed fabs and not abs.

--- a/ClassifyPoints/Makefile
+++ b/ClassifyPoints/Makefile
@@ -1,7 +1,7 @@
 CXX_FLAGS = -g
 
 ClassifyPoints:	main.cpp
-		g++ $(CXX_FLAGS) main.cpp -lopencv_highgui -lopencv_core -o ClassifyPoints
+		g++ $(CXX_FLAGS) main.cpp -lm -lopencv_highgui -lopencv_core -o ClassifyPoints
 
 clean:
 		rm -rf ClassifyPoints
