I give up on trying to get this lib crap to work.  I thought g++ was supposed to just look at LD_LIBRARY_PATH, but it doesn't seem to work so I'm just coding it in here.

--- a/BundleClouds/Makefile
+++ b/BundleClouds/Makefile
@@ -6,10 +6,10 @@ INCLUDE_PATH = -I../BundleFile
 all:	BundleClouds
 
 BundleClouds:	../BundleFile/libBundleFile.a main.cpp
-	g++ main.cpp $(CXXFLAGS) $(LIB_PATH) $(LIBS) $(INCLUDE_PATH) -o BundleClouds
+	g++ main.cpp -L$(LD_LIBRARY_PATH) $(CXXFLAGS) $(LIB_PATH) $(LIBS) $(INCLUDE_PATH) -o BundleClouds
 
 ../BundleFile/libBundleFile.a:
 	cd ../BundleFile; make; cd ../BundleClouds
 
 clean:
-	rm *.o BundleClouds
+	rm -rf BundleClouds
