Added installation for makefile.

--- a/BundleFile/Makefile
+++ b/BundleFile/Makefile
@@ -3,6 +3,15 @@ CXXFLAGS = -O3
 libBundleFile.a:	BundleFile.o BundlePoint.o BundleView.o BundleCamera.o
 	ar rcs libBundleFile.a BundleFile.o BundlePoint.o BundleView.o BundleCamera.o
 
+install:	libBundleFile.a
+	if [ ! -d ~/utilities/lib ]; then mkdir ~/utilities/lib; fi
+	cp libBundleFile.a ~/utilities/lib
+	if [ ! -d ~/utilities/include ]; then mkdir ~/utilities/include; fi
+	cp BundleFile.h ~/utilities/include
+	cp BundlePoint.h ~/utilities/include
+	cp BundleView.h ~/utilities/include
+	cp BundleCamera.h ~/utilities/include
+
 BundleFile.o:	BundleFile.cpp BundleFile.h BundlePoint.h BundleView.h BundleCamera.h
 	g++ $(CXXFLAGS) BundleFile.cpp -c -o BundleFile.o
 
