For some reason these changes were never properly committed.

--- a/CalibrateDepth/Makefile
+++ b/CalibrateDepth/Makefile
@@ -1,15 +1,14 @@
-CXXFLAGS     = -O3
-LIB_PATH     = -L../BundleFile
-LIBS         = -lBundleFile -lopencv_core -lopencv_highgui 
-INCLUDE_PATH = -I../BundleFile
+CXXFLAGS     = -g#O3
+LIBS         = -L/home/kmatzen/local/lib -lBundleFile -lopencv_core -lopencv_highgui 
  
 all:	CalibrateDepth
 
-BundleClouds:	../BundleFile/libBundleFile.a main.cpp
-	g++ main.cpp $(CXXFLAGS) $(LIB_PATH) $(LIBS) $(INCLUDE_PATH) -o CalibrateDepth
+CalibrateDepth:	main.cpp
+	g++ main.cpp $(CXXFLAGS) $(LIBS) -o CalibrateDepth
 
-../BundleFile/libBundleFile.a:
-	cd ../BundleFile; make; cd ../CalibrateDepth
+install:
+	if [ ! -d ~/utilities/bin ]; then mkdir ~/utilities/bin; fi
+	cp CalibrateDepth ~/utilities/bin
 
 clean:
-	rm *.o CalibrateDepth
+	rm -rf CalibrateDepth
