Added better ply and pcd support.

--- a/BundleClouds/Makefile
+++ b/BundleClouds/Makefile
@@ -1,5 +1,6 @@
-CXXFLAGS     = -g
-LIBS         = -lBundleFile -lopencv_core -lopencv_highgui 
+CXXFLAGS     = -O3 -fopenmp
+INCLUDE	     = -I/home/kmatzen/local/include/pcl-2.0 -I/home/kmatzen/local/include/eigen3
+LIBS         = -lBundleFile -lopencv_core -lopencv_highgui -lpcl_features -lpcl_kdtree -lpcl_surface -lpcl_io -lboost_system -lboost_filesystem 
  
 all:	BundleClouds
 
@@ -7,8 +8,11 @@ install:	BundleClouds
 		if [ ! -d ~/utilities/bin ]; then mkdir ~/utilities/bin; fi
 		cp BundleClouds ~/utilities/bin
 
-BundleClouds:	main.cpp
-	g++ main.cpp -L/home/kmatzen/local/lib $(CXXFLAGS) $(LIBS) -o BundleClouds
+ply.o:	ply.c
+	gcc ply.c -c -o ply.o
+
+BundleClouds:	main.cpp ply.o
+	g++ main.cpp ply.o $(INCLUDE) -L/home/kmatzen/local/lib $(CXXFLAGS) $(LIBS) -o BundleClouds
 
 clean:
 	rm -rf BundleClouds
