Forgot to commit these.

--- a/sampleDAE/Makefile
+++ b/sampleDAE/Makefile
@@ -1,10 +1,13 @@
 INCLUDE=-I/home/kmatzen/local/include/pcl-2.0 -I/home/kmatzen/local/include/eigen3
-LIBS=-L/home/kmatzen/local/lib -lassimp -lply
+LIBS=-L/home/kmatzen/local/lib -lassimp -lply -lpcl_io -lboost_filesystem
 
-all:	dae2ply
+all:	sampleDAE
 
-dae2ply:	main.cpp
-	g++ -g main.cpp $(INCLUDE) $(LIBS) -o dae2ply
+sampleDAE:	main.cpp
+	g++ -g main.cpp $(INCLUDE) $(LIBS) -o sampleDAE
+
+install:	all
+	cp sampleDAE ../bin
 
 clean:
-	rm -rf dae2ply
+	rm -rf sampleDAE
