--- a/BundleClouds/Makefile
+++ b/BundleClouds/Makefile
@@ -1,6 +1,6 @@
-CXXFLAGS     = -O3 -fopenmp
+CXXFLAGS     = -g
 INCLUDE	     = -I/home/kmatzen/local/include/pcl-2.0 -I/home/kmatzen/local/include/eigen3
-LIBS         = -lBundleFile -lopencv_core -lopencv_highgui -lpcl_features -lpcl_kdtree -lpcl_surface -lpcl_io -lboost_system -lboost_filesystem -lpcl_filters 
+LIBS         = -lBundleFile -lopencv_core -lopencv_highgui -lpcl_features -lpcl_kdtree -lpcl_surface -lpcl_io -lboost_system -lboost_filesystem -lpcl_filters -lply 
  
 all:	BundleClouds
 
