--- a/sampleDAE/Makefile
+++ b/sampleDAE/Makefile
@@ -1,10 +1,10 @@
-INCLUDE=-I/home/kmatzen/local/include/pcl-2.0 -I/home/kmatzen/local/include/eigen3
-LIBS=-L/home/kmatzen/local/lib -lassimp -lply -lpcl_io -lpcl_kdtree -lboost_filesystem
+INCLUDE=-I/home/kmatzen/local/include/pcl-1.0 -I/home/kmatzen/local/include/eigen3
+LIBS=-L/home/kmatzen/local/lib -lassimp -lply -lpcl_io -lpcl_kdtree -lboost_filesystem -lboost_thread
 
 all:	sampleDAE
 
 sampleDAE:	main.cpp
-	g++ -g main.cpp $(INCLUDE) $(LIBS) -o sampleDAE
+	g++ -fopenmp -g main.cpp $(INCLUDE) $(LIBS) -o sampleDAE
 
 install:	all
 	cp sampleDAE ../bin
