Cleaning up git repo

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,37 @@ bundler-v0.4-source/vc++/Debug/*
 bundler-v0.4-source/lib/jpeg/Debug/*
 bundler-v0.4-source/lib/jpeg/Release/*
 *.old
+*.ply
+*.a
+*.pcd
+*.out
+CalibrateDepth/CalibrateDepth
+ConvolutionDetection/ConvolutionDetection
+bundler-v0.4-source/bin/*
+bundler_kinect/bin/*
+bundler_kinect/src/Bundle2PMVS
+bundler_kinect/src/Bundle2Vis
+bundler_kinect/src/InjectDepth
+bundler_kinect/src/KeyMatchFull
+bundler_kinect/src/RadialUndistort
+bundler_kinect/src/bundler
+bundler-v0.4-source/src/Bundle2PMVS
+bundler-v0.4-source/src/Bundle2Vis
+bundler-v0.4-source/src/KeyMatchFull
+bundler-v0.4-source/src/RadialUndistort
+bundler-v0.4-source/src/bundler
+sampleDAE/sampleDAE
+BundleClouds/BundleClouds
+ClassifyPoints/ClassifyPoints
+bin/*
+lib/*
+include/*
+ReprojectDepth/ReprojectDepth
+bundler-v0.4-source/lib/f2c/arith.h
+bundler-v0.4-source/lib/f2c/signal1.h
+bundler-v0.4-source/lib/f2c/sysdep1.h
+bundler-v0.4-source/lib/libANN_char.so
+bundler_kinect/lib/f2c/arith.h
+bundler_kinect/lib/f2c/signal1.h
+bundler_kinect/lib/f2c/sysdep1.h
+bundler_kinect/lib/libANN_char.so
