Turned libply into libplyfile as a shared lib.  Disabled confidence saving for now.

--- a/ply/Makefile
+++ b/ply/Makefile
@@ -1,11 +1,12 @@
-CXXFLAGS=-g
-CFLAGS=-g
+MAJOR=0
+MINOR=0
+REVISION=1
+CXXFLAGS=-g -fPIC
+CFLAGS=-g -fPIC
 INCLUDE=-I. -I/usr/include/pcl-1.1 -I/usr/local/include/pcl-1.0/ -I/usr/include/pcl-1.0 -I/home/kmatzen/local/include/pcl-1.0 -I/usr/local/include/eigen3 -I/home/kmatzen/local/include/eigen3
 
-all: libply.a
-
-libply.a:	ply.o ply_io.o
-	ar rcs libply.a ply.o ply_io.o
+libplyfile.so.$(MAJOR).$(MINOR).$(REVISION):	ply.o ply_io.o
+	gcc -shared -Wl,-soname,libplyfile.so.$(MAJOR) -o $@ $^ -lc
 
 ply.o:	ply.h ply.c
 	gcc $(CFLAGS) $(INCLUDE) ply.c -c -o ply.o
@@ -13,9 +14,13 @@ ply.o:	ply.h ply.c
 ply_io.o:	ply_io.h ply_io.cpp
 	g++ $(CXXFLAGS) $(INCLUDE) ply_io.cpp -c -o ply_io.o
 
-install: libply.a
-	cp libply.a ../lib
-	cp ply_io.h ../include
+install: libplyfile.so.$(MAJOR).$(MINOR).$(REVISION)
+	mkdir -p ~/utilities/lib
+	cp $< ~/utilities/lib
+	ln -s -f /home/kmatzen/utilities/lib/$< /home/kmatzen/utilities/lib/libplyfile.so
+	ln -s -f /home/kmatzen/utilities/lib/$< /home/kmatzen/utilities/lib/libplyfile.so.$(MAJOR)
+	mkdir -p ~/utilities/include
+	cp ply_io.h ~/utilities/include	
 
 clean:
-	rm -rf *.o *.a
+	rm -rf *.o *.so*
